cluster/kubernetes/apps/network/gateways/external/gateway.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway
  namespace: network
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    gatus.home-operations.com/endpoint: |
      interval: 1m
      alerts:
        - type: pushover
      group: External
      client:
        dns-resolver: tcp://1.1.1.1:53
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: 10.10.30.72
  listeners:
    # catch all external http -> https
    - name: http-redirect-external
      hostname: '*.cjsolsen.com'
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    # catch traffic for kromgo
    - name: kromgo
      hostname: kromgo.cjsolsen.com
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              external-gateway-access: 'true'
      tls:
        mode: Terminate
        certificateRefs:
          - name: kromgo-cjsolsen-com
    # catch traffic for qubt website
    - name: qubt-ingress
      hostname: cjsolsen.com
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              external-gateway-access: 'true'
      tls:
        mode: Terminate
        certificateRefs:
          - name: qubt-cjsolsen-com
    # catch traffic for l1nkr website
    - name: l1nkr-ingress
      hostname: l1nkr.cjsolsen.com
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              external-gateway-access: 'true'
      tls:
        mode: Terminate
        certificateRefs:
          - name: l1nkr-cjsolsen-com
    # catch traffic for webhook
    - name: webhook-ingress
      hostname: webhook.cjsolsen.com
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              external-gateway-access: 'true'
      tls:
        mode: Terminate
        certificateRefs:
          - name: webhook-cjsolsen-com
    # catch traffic for konfalte
    - name: konflate-ingress
      hostname: konflate.cjsolsen.com
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              external-gateway-access: 'true'
      tls:
        mode: Terminate
        certificateRefs:
          - name: konflate-cjsolsen-com
    # catch traffic for printdigfattig website
    - name: printdigfattig-ingress
      hostname: printdigfattig.cjsolsen.com
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              external-gateway-access: 'true'
      tls:
        mode: Terminate
        certificateRefs:
          - name: printdigfattig-cjsolsen-com
