cluster/kubernetes/apps/network/gateways/external/http-redirect.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-https-redirect-external
  namespace: network
spec:
  parentRefs:
    - name: external-gateway
      sectionName: http-redirect-external
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
